<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name_short">PADC-Animation-Sample</string>
    <string name="action_user_account">User Account</string>

    <string name="msg_default_empty">သက်ဆိုင်ရာ data များ ပြရန် မရှိသေးပါ</string>
    <string name="dummy_text_5_paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consequat posuere ipsum ut dictum. Mauris condimentum, dui in consequat maximus, felis massa sagittis ante, a dapibus ligula erat sed neque. Ut consequat vel odio eget pharetra. In vitae velit sit amet lectus pretium condimentum. Donec ut ullamcorper augue. Morbi vitae dolor eu mi consectetur hendrerit ut vitae eros. Maecenas commodo faucibus lobortis. Cras vestibulum ante in nisi tincidunt, et sagittis mauris porta. Sed quam sem, sagittis quis hendrerit eu, imperdiet nec magna. Ut fringilla ligula id quam aliquam, ut suscipit ante gravida. Nulla vulputate, sem non ultricies fermentum, mauris ante imperdiet risus, nec sollicitudin nibh quam nec ipsum. Cras facilisis, magna et malesuada accumsan, felis arcu convallis ipsum, sed gravida tortor elit sed orci.

Aliquam volutpat at nisl nec sodales. Vestibulum pellentesque imperdiet nibh, tempor feugiat eros aliquam ac. Mauris in sapien condimentum, viverra tellus nec, faucibus lectus. Vivamus quis nulla rhoncus, vehicula leo vel, rutrum sem. Aliquam eu imperdiet urna, id feugiat justo. Praesent eu nulla tempus, convallis diam a, sollicitudin eros. Cras euismod ante nec erat condimentum, ac viverra nulla gravida. Donec in ante ac mi luctus iaculis. Morbi efficitur, urna vitae cursus gravida, libero augue lacinia elit, et condimentum ex felis sed odio. Vivamus quis lorem est. Morbi ut eros ut ex blandit dapibus a a velit. Morbi eu risus metus. Proin quis mi a dolor tempus lobortis. Sed ac odio vitae magna eleifend sagittis ac at ante. Donec lorem velit, blandit eget accumsan sit amet, placerat nec diam. Proin vitae consectetur velit, id maximus est.

In blandit sollicitudin risus eu placerat. Curabitur tincidunt molestie tempor. Etiam eget ante nunc. Vivamus venenatis nibh sit amet dapibus lobortis. Morbi facilisis bibendum tortor non mattis. In hac habitasse platea dictumst. Sed dictum orci ante, et maximus lectus consectetur nec. Nam dapibus felis vitae mauris interdum, sit amet cursus felis pellentesque. Etiam lacinia volutpat odio quis dapibus. Nullam vel libero volutpat, commodo erat quis, faucibus ante. Fusce dictum, lectus et tincidunt pharetra, ligula lectus gravida diam, a ultrices erat orci et elit.

Donec luctus et metus in consequat. Aliquam odio erat, condimentum sit amet turpis in, faucibus convallis ante. Donec non odio purus. Maecenas tincidunt porttitor nisl commodo ornare. Vivamus ac massa varius, mollis justo lacinia, imperdiet felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam tempus sodales nibh, nec sollicitudin mi bibendum ut.

Donec scelerisque dui ac imperdiet tempus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer placerat maximus luctus. Integer nec maximus orci, sed eleifend lorem. Morbi egestas, mi at tristique volutpat, nisl quam euismod justo, eget tempus lectus enim non mauris. Pellentesque vel quam et risus condimentum consequat vel sit amet elit. Nullam at finibus nibh. Donec ultrices lectus nibh, non placerat purus fringilla sed. Fusce massa nisi, dignissim sed mauris et, tempor hendrerit sem. Nunc tempus massa et quam suscipit scelerisque. Donec vel sagittis nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="detail_transition_name" translatable="false">TN-Attraction-Image</string>

    <string name="hint_phone_no">Your phone no (0912345678)</string>
    <string name="hint_password">Your password</string>
    <string name="lbl_login_action">Login</string>
    <string name="hint_name">Your Name (Aung Aung)</string>
    <string name="msg_date_of_birth">Date of Birth</string>
    <string name="msg_select_your_current_residing_country">Select your resident country</string>
    <string name="lbl_register_action">Register</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_login">Login</string>

    <string name="format_app_version"><xliff:g id="app_name">%1$s</xliff:g> - <xliff:g id="build_varient">%2$s</xliff:g> - v<xliff:g id="version_number">%3$s</xliff:g></string>
</resources>
