<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_full">

    <ImageView
        android:id="@+id/iv_register_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/register_with_facebook_large"
        android:clickable="true"
        />

    <ImageView
        android:id="@+id/iv_register_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/iv_register_with_facebook"
        android:layout_below="@id/iv_register_with_facebook"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/register_with_google_large"
        android:clickable="true"
        android:background="@drawable/bg_rounded"
        android:padding="1dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_small"
        android:textColorHint="@color/accent"
        android:layout_below="@id/iv_register_with_google">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/accent"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold">

        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_small"
        android:textColorHint="@color/accent"
        android:layout_below="@id/input_layout_name">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_phone_no"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/accent"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold">

        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_small"
        android:textColorHint="@color/accent"
        android:layout_below="@id/input_layout_phone_no">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/accent"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/margin_medium"
            android:drawableRight="@drawable/ic_visibility_24dp">

        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_password"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@drawable/bg_rounded"
        android:editable="false"
        android:hint="@string/msg_date_of_birth"
        android:maxLines="1"
        android:padding="@dimen/margin_medium"
        android:singleLine="true"
        android:textColor="@color/black_full"
        android:textColorHint="@color/accent"
        android:textSize="@dimen/text_regular_2x" />

    <TextView
        android:id="@+id/lbl_current_residing_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_of_birth"
        android:layout_marginLeft="@dimen/margin_spinner_label"
        android:layout_marginRight="@dimen/margin_spinner_label"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/msg_select_your_current_residing_country"
        android:textColor="@color/accent" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/sp_residing_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_current_residing_country"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium_n"
        android:layout_below="@id/lbl_current_residing_country"
        />

    <Button
        android:id="@+id/btn_register"
        style="@style/AccentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sp_residing_country"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:text="@string/lbl_register_action" />

    <TextView
        android:id="@+id/lbl_navigate_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:textColor="@color/accent"
        android:text="Already Registered ?"
        android:layout_below="@id/btn_register"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>